Eddid updates to reimage functional + srv
server restart and some updates.